# Creature-Conflict-Unofficial-Patch

./: CMakeLists.txt  LICENSE  README.md  build.bat  dllmain.cpp  main.cpp
internal/: memoryoperations.cpp  memoryoperations.h  memoryoperations.hpp
